update:add blog server

--- a/static/base.html
+++ b/static/base.html
@@ -1,5 +1,6 @@
 <h1>{{ title }}</h1>
 <nav>
-   <a [routerLink]="['Blog']">Dashboard</a>
+   <a [routerLink]="['Blog']">blog1</a>
+   <a [routerLink]="['Blog2']">blog2</a>
 </nav>
 <router-outlet></router-outlet>
